feature - Adding test cases